# mini_trainer

./: .gitignore  README  builders.py  classifier.py  conda.yaml  predict.py  pyproject.toml  train.py  trainer.py  utils.py
examples/: blair.ipynb  compare_hierarchical.sh  compare_hierarchical_v2.sh  hierarchical.ipynb  hierarchical_guillaume.py  hierarchical_predict.py  hierarchical_train.py  hierarchical_ucloud.py  mnist.ipynb  resize_image_dir.py  run_notebook.py  test.ipynb  test.py
examples/hierarchical/: loss.py  utils.py
examples/hierarchical/base/: gbif.py  integration.py  loss.py  model.py  setup.py  utils.py
examples/hierarchical/base/eval/: metric.py
examples/hierarchical/guillaume/: gbif.py  hierarchical.py  setup.py
mini_trainer/: __init__.py  builders.py  classifier.py  predict.py  train.py  trainer.py  utils.py
mini_trainer/utils/: __init__.py  augmentation.py  data.py  io.py  logging.py  loss.py  plot.py  tensorboard.py
